<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.macgyver.numberconverter.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="@dimen/title_size"
        android:textAlignment="center"
        android:paddingBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="@dimen/title_text_size"
        android:text="@string/title_text"
        android:paddingBottom="32dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal">

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/number_hint"
            android:gravity="center"
            android:layout_marginRight="16dp"
            android:id="@+id/input_number"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/base_hint"
            android:gravity="center"
            android:id="@+id/input_base"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal"
        android:paddingBottom="32dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:background="@color/gray_backround"
            android:hint="@string/new_number_text"
            android:id="@+id/num_display"
            android:layout_marginRight="16dp"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:hint="@string/new_base"
            android:id="@+id/input_new_base"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/button_text"
        android:id="@+id/convert_button"/>
</LinearLayout>
